let try this to fix the gap on the right hand side position: fixed;     right: 0;     bottom: 0;     left: 0;

--- a/css/style.css
+++ b/css/style.css
@@ -258,7 +258,10 @@ footer {
   }
 
   .social-media {
-    width: 100%;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    left: 0;
   }
 
   small {
